Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def meet(traveller): \n",
-    "    traveller=                          # \"sally\"\n",
+    "                         # \"sally\"\n",
     "    welcome_message = \"Hi \" + traveller.title() + \", I'm so glad we'll be going on the trip together!\"\n",
     "    return welcome_message"
    ]
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "\"Hi Fred, I'm so glad we'll be going on the trip together!\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
